<resources>
    <string name="app_name">SeekAndSolve</string>
    <string name="cofre">cofre</string>
    <string name="app_logo">app_logo</string>
    <string name="comienza_tu_aventura">¡Comienza tu aventura!</string>
    <string name="slogan">EXPLORA, RESUELVE, CONQUISTA</string>
    <string name="crea_tu_cuenta">Crea tu cuenta.</string>
    <string name="ingresa_tus_datos">Ingresa tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo">Correo</string>
    <string name="contrasenia">Contrasenia</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="confirmar_contrasenia">Confirmar contrasenia</string>
    <string name="registrarse">Registrarse</string>
    <string name="o">o</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="default_web_client_id">669449036916-qs7gghktjr04ebhmu0mi078drpcqtcd8.apps.googleusercontent.com</string>
    <string name="recompensas">Recompensas</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="volver">Volver</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cambiar_foto">Cambiar Foto</string>
    <string name="tus_recompensas">Tus recompensas</string>
    <string name="estadisticas_carreras">Estadísticas de carreras</string>
    <string name="esta_semana">Semana</string>
    <string name="este_mes">Mes</string>
    <string name="este_anio">Año</string>
    <string name="todo_tiempo">Todo</string>
    <string name="carreras">Carreras</string>
    <string name="duracion">Duración</string>
    <string name="desafios">Desafíos</string>
    <string name="aplicar_cambios">Aplicar Cambios</string>
    <string name="tus_amigos">Tus Amigos</string>
    <string name="agregar_amigos">Agregar Amigos</string>
    <string name="agregar">Agregar</string>
    <string name="usuario_correo">Usuario/Correo</string>
    <string name="warning">Al registrarte, aceptas nuestras Condiciones de Servicio y Política de Privacidad</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="nombre_de_usuario_o_correo">Nombre de usuario o correo</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="username">Username</string>
    <string name="profile_image">profile image</string>
    <string name="tu_aventura_comienza_aqui">Tu aventura comienza aquí 🚀</string>
    <string name="phone_hand_image">phone hand image</string>
    <string name="busca_un_desaf_o_para_empezar">Busca un desafío para empezar</string>
    <string name="ver_desafios">Ver desafíos</string>
    <string name="crear_desafio">Crear desafío</string>
    <string name="clasificaciones">Clasificaciones</string>
    <string name="amigos">Amigos</string>
    <string name="cerca_de_ti">Cerca de ti</string>
    <string name="clasificacion">Clasificación</string>
    <string name="medalla">medalla</string>
    <string name="rewards_text">%1$d recompensas</string>
    <string name="a_punto_de_jugar">Estas a punto de jugar</string>
    <string name="invitar_amigos">Invitar amigos</string>
    <string name="jugar_desafio">Jugar desafío</string>
    <string name="descripcion">Descripción</string>
    <string name="desafio_terminado">Desafío terminado</string>
    <string name="titulo_pista">Obtén una pista</string>
    <string name="estadisticas_de_carrera">Estadísticas de carrera</string>
    <string name="pista">Pista</string>
    <string name="marcar_checkpoint">Marcar Checkpoint</string>
    <string name="agregar_checkpoint">Agregar Checkpoint</string>
    <string name="creacion_de_desafio">Creación de Desafío</string>
    <string name="editar">Editar</string>
    <string name="punto_inicial">Punto inicial</string>
    <string name="punto_final">Punto final</string>
    <string name="revisar_trayecto">Revisar Trayecto</string>
    <string name="iniciar_desafio">Iniciar Desafío</string>
    <string name="resolver_acertijo">Resolver acertijo</string>
    <string name="abandonar">Abandonar</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="eliminar">Eliminar</string>
    <string name="desafios_disponibles">Desafíos disponibles</string>
    <string name="ver_desafio">Ver Desafío</string>
    <string name="configurar_desafio">Configurar desafío</string>
    <string name="invitar_amigos_desafio">Invita amigos al desafío</string>
    <string name="seleccionar_punto">Seleccionar punto</string>
    <string name="addFriendsPlease">Agrega colegas a tu aventura por SeekAndSolve</string>
    <string name="ver_recompensas">Ver</string>
    <string name="punto_origen">Punto Origen:</string>
    <string name="punto_destino">Punto Destino:</string>
    <string name="crear_pregunta">Crear Pregunta</string>.
    <string name="creacion_pregunta">Creación de Pregunta</string>
    <string name="enunciado">Enunciado</string>
    <string name="establecerse_inactivo">Establecerse inactivo</string>
</resources>