<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logica.CrearDesafioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:contentDescription="@string/volver"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/rankingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_font"
            android:gravity="center"
            android:text="@string/creacion_de_desafio"
            android:textColor="@color/tertiaryColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/crearDesafio"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/nombreDesafio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_border"/>

        <ImageView
            android:id="@+id/imagenDesafio"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/cambiarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_foto"
            android:backgroundTint="@color/secondaryColor"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/punto_inicial"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/editarPuntoInicial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/editar"
                android:backgroundTint="@color/secondaryColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/punto_final"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/editarPuntoFinal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/editar"
                android:backgroundTint="@color/secondaryColor"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listaCheckpoints"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/agregarCheckpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_checkpoint"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/secondaryColor"/>

        <EditText
            android:id="@+id/descripcionDesafio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/descripcion"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/crearDesafio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_desafio"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>