<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logica.registerActivity">

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crea_tu_cuenta"
        android:textSize="24sp"
        android:fontFamily="@font/lexend_font"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ingresa_tus_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tus_datos"
        android:textSize="18sp"
        android:fontFamily="@font/lexend_font"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/createAccount"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/ingresa_tus_datos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/nombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correo"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/confirmarContrasenia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/confirmar_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasenia"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/fechaNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/confirmarContrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>