<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/item_border_bottom">


    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="2"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/profile_user_svgrepo_com"
         />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/username"
        android:textSize="13sp"
        android:textColor="?android:textColor"
        android:fontFamily="@font/lexend_font"
        android:gravity="left"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/recompensas"
        android:textSize="13sp"
        android:textColor="?android:textColor"
        android:fontFamily="@font/lexend_font"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>