<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logica.EstadisticasCarreras">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="?android:attr/selectableItemBackground"
            android:padding="15dp"
            android:contentDescription="@string/volver"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/estadisticasCarrerasTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/lexend_font"
            android:gravity="center"
            android:text="@string/estadisticas_carreras"
            android:textColor="@color/tertiaryColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/botonesEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header_stats"
        android:layout_marginTop="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:backgroundTint="@color/transparent"
                android:text="@string/esta_semana"
                android:textColor="@color/primaryColor"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/primaryColor"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="?android:textColor"
                android:backgroundTint="@color/transparent"
                android:text="@string/este_mes" />
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/transparent"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:backgroundTint="@color/transparent"
                android:text="@string/este_anio"
                android:textColor="?android:textColor"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/transparent"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:backgroundTint="@color/transparent"
                android:text="@string/todo_tiempo"
                android:textColor="?android:textColor"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/transparent"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenEstadistica"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonesEstadisticas"
        />

    <LinearLayout
        android:id="@+id/botonesTipoEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imagenEstadistica"
        android:layout_marginTop="28dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:textSize="11sp"
            android:background="@drawable/border_tipo_estadisticas_btn"
            android:textColor="?android:textColor"
            android:text="@string/carreras"
            android:fontFamily="@font/font_family"
            android:drawableLeft="@drawable/check_circle" />

        <Button
            android:layout_width="wrap_content"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:background="@drawable/border_tipo_estadisticas_btn"
            android:textColor="@color/primaryColor"
            android:text="@string/duracion"
            android:fontFamily="@font/font_family"
            android:drawableLeft="@drawable/watch_icon" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:background="@drawable/border_tipo_estadisticas_btn"
            android:textColor="?android:textColor"
            android:text="@string/desafios"
            android:fontFamily="@font/font_family"
            android:drawableLeft="@drawable/add_icon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>